// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppReducer handle the delete token action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "user": false,
  "validateToken": true,
}
`;

exports[`AppReducer handle the delete token error action 1`] = `
Immutable.Map {
  "loading": false,
  "error": [Error: Test error],
  "user": false,
  "validateToken": true,
}
`;

exports[`AppReducer handle the delete token success action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "user": false,
  "validateToken": true,
}
`;

exports[`AppReducer handle the load user action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "user": false,
  "validateToken": false,
}
`;

exports[`AppReducer handle the load user error action 1`] = `
Immutable.Map {
  "loading": false,
  "error": Immutable.Map {
    "loadUser": [Error: Test error],
  },
  "user": false,
  "validateToken": true,
}
`;

exports[`AppReducer handle the load user success action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "user": Immutable.Map {},
  "validateToken": true,
}
`;

exports[`AppReducer returns the initial state 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "user": false,
  "validateToken": true,
}
`;
